all txt color changing properly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Car Garage</title>
+    <title>Cars Heaven</title>
 
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Open+Sans+Condensed|Roboto:900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
@@ -25,14 +25,13 @@
             <div class="car lambo">
                 <img src="img/lambo/lambo_yellow.png" alt="">
             </div>
-            <p class="car-txt">lamborghini</p>
+            <p class="car-txt txt-color">lamborghini</p>
             <div class="information">
-                <p class="accelaration">accelaration</p>
-                <p class="accelaration txt">2.8s</p>
+                <p class="accelaration txt-color">accelaration</p>
+                <p class="accelaration-txt">2.8s</p>
                 <p>from 0-100 kmh</p>
-                <p class="mileage">mileage</p>
-                <p class="mileage txt">11.24
-                    <span>kmpl</span>
+                <p class="mileage txt-color">mileage</p>
+                <p class="mileage-txt">11.24 kmpl
                 </p>
             </div>
             <div class="car-logo">
