work done everything works fine

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <!-- <div class="loader">
+    <div class="loader">
         <img src="img/LOADING.gif" alt="">
-    </div> -->
+    </div>
 
     <div class="body">
         <div class="top-shield"></div>
@@ -35,7 +35,7 @@
                 </p>
             </div>
             <div class="car-logo">
-                <img src="img/lambo_logo.png" alt="">
+                <img src="img/logo/lambo_logo.png" alt="">
             </div>
 
             <div class="container">
